--- a/style.css
+++ b/style.css
@@ -4,8 +4,25 @@
     box-sizing: border-box;
     font-family: 'Playfair Display', serif;
 }
+html{
+    scroll-behavior: smooth;
+    position: relative;
+}
+body{
+    position: relative;
+}
+.container{
+    position: relative;
+}
+.headerr{
+    margin-top: 10px;
+    transition: all .5s ease-in;
+}
 .nav_logo img{
     width: 50px;
+}
+.nav_item a{
+    color: red;
 }
 .nav_item{
     position: relative;
@@ -60,7 +77,7 @@
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     cursor: pointer;
     margin-bottom: 20px;
-    transition: .5s;
+    transition: .3s;
 }
 .course_item:hover{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -120,7 +137,136 @@
 .course_more{
     position: absolute;
     right: 5px;
-    bottom: 10px;
+    bottom: 3px;
+    display: flex;
+   border: 1px solid rgb(223, 223, 223);
+   padding: 3px 5px;
+   border-radius: 5px;
+   transition: .5s all linear;
+}
+.course_more a{
+    color: black;
+    text-decoration: none;
+    transition: .2s all linear;
+}
+.course_more:hover{
+    transform: scale(1.1);
+    background-color: orange;
+}
+.course_more:hover a{
+    color: #fff;
+    text-decoration: none;
+}
+.scroll-top{
+    position: fixed;
+    right: -50px;
+    bottom: 30px;
+    z-index: 100;
+    font-size: 26px;
+    background-color: rgb(0, 255, 21);
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 5px;
+    text-align: center;
+    transition: .5s;
+}
+.scroll-top a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+}
+.scroll-top:hover a{
+    color: #fff;
+    text-decoration: none;
+}
+
+/*------------------------LOGIN---------------------*/
+.login_wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.form{
+    width: 450px;
+    max-width: 95%;
+    padding: 10px 20px;
+    margin: 45px 0 50px 0;
+    border-radius: 5px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+/*-------------Register---------*/
+.register_p{
+    font-size: 20px;
+}
+
+/*------------------Class-------------*/
+.box .percent svg{
+    position: relative;
+    width: 170px;
+    height: 170px;
+}
+.box .percent svg circle{
+    width: 170px;
+    height: 170px;
+    fill: none;
+    stroke-width: 10;
+    stroke: #000;
+    transform: translate(5px 5px);
+    stroke-dasharray: 170;
+    stroke-dashoffset: 170;
+    stroke-linecap: round;
+}
+.box .percent svg circle:nth-child(1){
+    stroke-dashoffset: 0;
+    stroke: #f3f3f3;
+}
+.box .percent svg circle:nth-child(1){
+    stroke-dashoffset: calc(170 - (170 * 70) / 100);
+    stroke: orangered;
+}
+.class{
+    margin: 10px 0;
+}
+.course_class{
+    position: relative;
+}
+.class_img{
+    position: relative;
+    overflow: hidden;
+}
+.class_img::before{
+    position: absolute;
+    content: "";
+    transition: .3s;
+}
+.class_img::after{
+    content: '';
+    position: absolute;
+    transition: .3s;
+}
+.class_img:hover::after{
+    width: 80%;
+    height: 100%;
+    background-color: rgba(31, 34, 31, 0.39);
+}
+.class_img:hover::before{
+    width: 0; 
+    height: 0; 
+    border-top: 30px solid transparent;
+    border-bottom: 30px solid transparent;
+    border-left: 40px solid rgb(255, 255, 255);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
 }
 @media screen and (max-width: 1270px){
     .course_item{
@@ -129,7 +275,7 @@
 }
 @media screen and (max-width:1160px){
     .course_item{
-        height: 300px;
+        height: 350px;
     }
 }
 @media screen and (max-width: 1050px){
@@ -139,7 +285,7 @@
 }
 @media screen and (max-width:960px){
     .course_item{
-        height: 270px;
+        height: 340px;
     }
 }
 @media screen and (max-width:846px){
@@ -162,7 +308,7 @@
 }
 @media screen and (max-width: 650px){
     .course_item{
-        height: 270px;
+        height: 340px;
     }
 }
 @media screen and (max-width: 550px){
@@ -175,4 +321,17 @@
         height: 350px;
         margin-top: 20px;
     }
+}
+@media screen and (max-width:1146px){
+    .course_class{
+        height: 350px;
+    }
+}
+
+/* Toggle elements */
+.visible{
+    right: 30px;
+}
+.nav-scroll{
+    background-color: rgb(40, 42, 54);
 }
